deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: test-webapp-deployment
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5 
  template:
    metadata:
      labels:
        app: test-webapp-deployment
    spec:
      containers:
      - name: test-webapp-deployment
        image: gcr.io/status-262919/test-webapp:1267b7e9b5406f730b39d065a3cd39fd7d76017f
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 100m
