service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-webapp-service
spec:
  type: NodePort
  selector:
    app: test-webapp-deployment
  ports:
  - protocol: TCP
    port: 60000
    targetPort: 4444
