ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-webapp-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: test-webapp-ip-address
    networking.gke.io/managed-certificates: test-webapp-certificate
    # ingress.gcp.kubernetes.io/pre-shared-cert: "test-webapp-certificate"
spec:
  backend:
    serviceName: test-webapp-service
    servicePort: 60000
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: test-webapp-service
          servicePort: 60000
